Controllers: Added /:id/register
