# src/controllers/contestController.ts
@@ -18,6 +18,8 @@ import "dotenv/config";
 import { IContestService } from "@/services/IContestService";
 import { Body, Get, Path, Post, Query, Route } from "tsoa";
 import { Contest } from "../entities/Contest";
+import { any } from "joi";
+import { IUserService } from "@/services/IUserService";
 
 export type GetAllContestsResponseEntry = {
   id: number;
@@ -29,9 +31,11 @@ export type GetAllContestsResponseEntry = {
 @Route("contest")
 export class ContestController {
   private readonly contestService: IContestService;
+  private readonly userService: IUserService;
 
-  constructor(contestService: IContestService) {
+  constructor(contestService: IContestService, userService: IUserService) {
     this.contestService = contestService;
+    this.userService = userService;
   }
 
   @Get("")
@@ -95,16 +99,6 @@ export class ContestController {
         endTimeHigh = 2 ** 63 - 1;
       }
 
-      console.log(
-        searchKeywords,
-        startTimeLow,
-        startTimeHigh,
-        endTimeLow,
-        endTimeHigh,
-        limit,
-        offset,
-      );
-
       const contests = await this.contestService.searchContests(
         searchKeywords,
         startTimeLow,
@@ -127,7 +121,7 @@ export class ContestController {
       }
       return response;
     } catch (err) {
-      throw new Error(`Error getting contest: ${err}`);
+      throw new Error(`Error searching contest: ${err}`);
     }
   }
 
@@ -159,7 +153,7 @@ export class ContestController {
     } = body;
 
     try {
-      await this.contestService.createContest({
+      const response = await this.contestService.createContest({
         title,
         description,
         ruleText,
@@ -170,9 +164,64 @@ export class ContestController {
         isPublished,
         organizerId,
       });
-      return { message: "Contest created successfully" };
+      return {
+        message: "Contest created successfully",
+        responseData: response,
+      };
     } catch (err) {
       throw new Error(`Error creating contest: ${err}`);
+    }
+  }
+
+  @Post("{id}/register")
+  public async registerToContest(
+    @Path() id: number,
+    @Body() body: { userId: number },
+  ) {
+    const { userId } = body;
+
+    try {
+      let res: any;
+
+      res = await this.contestService.getContestById(id);
+      if (!res) {
+        return {
+          message: "Contest not found",
+          status: 404,
+          data: res,
+        };
+      }
+
+      res = await this.userService.getUserById(userId);
+      if (!res) {
+        return {
+          message: "User not found",
+          status: 404,
+          data: res,
+        };
+      }
+
+      res =
+        await this.contestService.getContestParticipationByContestIdAndUserId(
+          id,
+          userId,
+        );
+      if (res) {
+        return {
+          message: "Already registered",
+          status: 403,
+          data: res,
+        };
+      }
+
+      res = await this.contestService.addContestParticipation(id, userId);
+      return {
+        message: "Registered successfully",
+        status: 201,
+        data: res,
+      };
+    } catch (err) {
+      throw new Error(`Error registering user to contest ${err}`);
     }
   }
 
